# haskell-compiled-site

./: .gitignore  Dockerfile  README.md  compiled-website.cabal  docker-compose.yml  nginx.conf
app/: Main.hs
content/: index.html
templates/: default.html  post.html  tag.html  tags.html
