name:               compiled-website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >= 4.7 && < 5
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010